# tictactoe-cli

./: README.md
tictactoe-cli/: CMakeLists.txt  generate_project.sh
tictactoe-cli/include/: CBoard.h  CGameManager.h  CPlayer.h  CRandomGenerator.h  CTicTacToe.h  TurnMaker.h
tictactoe-cli/src/: CBoard.cpp  CGameManager.cpp  CPlayer.cpp  CRandomGenerator.cpp  CRenderer.cpp  CTicTacToe.cpp  TurnMaker.cpp  main.cpp
tres_en_raya/: Ai.cpp  Ai.hpp  AiPlayer.cpp  AiPlayer.hpp  Board.cpp  Board.hpp  CAi.cpp  CAi.hpp  CAiPlayer.cpp  CAiPlayer.hpp  CBoard.cpp  CBoard.hpp  CGameManager.cpp  CGameManager.hpp  CHumanPlayer.cpp  CHumanPlayer.hpp  CPlayer.cpp  CPlayer.hpp  CRandomGenerator.cpp  CRandomGenerator.hpp  CRenderer.cpp  CRenderer.hpp  CTicTacToe.cpp  CTicTacToe.hpp  CTurnMaker.cpp  CTurnMaker.hpp  GameManager.cpp  GameManager.hpp  HumanPlayer.cpp  HumanPlayer.hpp  Player.cpp  Player.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Renderer.cpp  Renderer.hpp  TicTacToe.cpp  TicTacToe.hpp  TurnMaker.cpp  TurnMaker.hpp  (+1 more)
